2011-04-01  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: appropriateSelectorForNode() invokes the "localName" getter on DOMNode rather than function
        https://bugs.webkit.org/show_bug.cgi?id=57632

        Moved the affected method onto the DOMNode.prototype as "appropriateSelectorFor".

        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMNode.prototype.appropriateSelectorFor):
        * inspector/front-end/EventListenersSidebarPane.js:
        ():
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylesSidebarPane.prototype.addBlankSection):
        * inspector/front-end/utilities.js:

2011-04-04  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed. Followup to an incomplete commit in r82806.

        * inspector/front-end/ExtensionAPI.js:
        (WebInspector.injectedExtensionAPI.PanelWithSidebarImpl.prototype.createSidebarPane):
        (WebInspector.injectedExtensionAPI.ExtensionSidebarPaneImpl):
        (WebInspector.injectedExtensionAPI.ExtensionSidebarPaneImpl.prototype.setHeight):
        (WebInspector.injectedExtensionAPI.ExtensionSidebarPaneImpl.prototype.setExpression):
        (WebInspector.injectedExtensionAPI):
        * inspector/front-end/ExtensionPanel.js:
        (WebInspector.ExtensionSidebarPane):
        (WebInspector.ExtensionSidebarPane.prototype.setPage):
        (WebInspector.ExtensionSidebarPane.prototype._setObject):
        * inspector/front-end/ExtensionServer.js:
        (WebInspector.ExtensionServer):
        (WebInspector.ExtensionServer.prototype.notifyExtensionSidebarUpdated):
        (WebInspector.ExtensionServer.prototype._onCreatePanel):
        (WebInspector.ExtensionServer.prototype._onCreateSidebarPane):
        (WebInspector.ExtensionServer.prototype.createClientIframe):
        (WebInspector.ExtensionServer.prototype._onSetSidebarContent):

2011-04-04  Yury Semikhatsky  <yurys@chromium.org>
