@@ -1,3 +1,13 @@
+2011-04-04  Alexander Pavlov  <apavlov@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: Incorrectly reports warning on missing/incorrect content-type for 304s
+        https://bugs.webkit.org/show_bug.cgi?id=48525
+
+        * inspector/front-end/Resource.js:
+        (WebInspector.Resource.prototype._mimeTypeIsConsistentWithType):
+
 2011-04-01  Alexander Pavlov  <apavlov@chromium.org>
 
         Reviewed by Yury Semikhatsky.
